# SpectralEvents

./: pyproject.toml
.github/workflows/: release.yml
